# lazycmake

./: .gitignore  AGENTS.md  CMakeLists.txt  Cargo.toml  LICENSE  README.md
build_directory2/: CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile
build_directory2/examples/: CTestTestfile.cmake  Makefile
build_directory2/tests/: CTestTestfile.cmake  Makefile  lazycmake_core_tests-b12d07c_include.cmake
cmake/: LazyCMakeConfig.cmake
docs/: DESIGN.md
examples/: 01_basic_project_generation.cpp  02_event_bus_usage.cpp  03_config_system_demo.cpp  04_build_pipeline_demo.cpp  CMakeLists.txt
include/lazycmake/cmake_gen/: cmake_file.hpp  cmake_generator.hpp  cmake_printer.hpp  generated_file_set.hpp  modern_cmake_generator.hpp
include/lazycmake/config/: config_types.hpp  keymap_manager.hpp  settings_manager.hpp  template_manager.hpp  theme_manager.hpp
include/lazycmake/core/: cmake_importer.hpp  dependency_registry.hpp  generated_file_lock.hpp  project.hpp  project_repository.hpp  target_validator.hpp  types.hpp
include/lazycmake/events/: event_bus.hpp
include/lazycmake/fswatch/: file_watcher.hpp
include/lazycmake/plugins/: plugin_api.hpp  plugin_host.hpp
include/lazycmake/tui/: application.hpp  build_overlay.hpp  color_helper.hpp  conflict_dialog.hpp  dependency_dialog.hpp  help_overlay.hpp  main_workspace.hpp  run_overlay.hpp  screen.hpp  settings_screen.hpp  startup_screen.hpp  wizard_screen.hpp
include/lazycmake/tui/panels/: file_panel.hpp  output_panel.hpp  panel_base.hpp  target_panel.hpp
plugins/clang_format/: CMakeLists.txt  manifest.json  plugin.cpp
src/: build.rs  config.rs  diagnostic.rs  event.rs  main.rs  project.rs  run.rs
src/cmake_gen/: cmake_file.cpp  cmake_printer.cpp  generated_file_set.cpp  modern_cmake_generator.cpp
src/config/: config_types.cpp  keymap_manager.cpp  settings_manager.cpp  template_manager.cpp  theme_manager.cpp
src/core/: cmake_importer.cpp  dependency_registry.cpp  generated_file_lock.cpp  project.cpp  project_repository.cpp  target_validator.cpp  types.cpp
src/events/: event_bus.cpp
src/fswatch/: file_watcher.cpp
src/plugins/: plugin_host.cpp
src/tui/: app.rs  application.cpp  build_overlay.cpp  color_helper.cpp  conflict_dialog.cpp  dependency_dialog.cpp  help_overlay.cpp  main.cpp  main_workspace.cpp  run_overlay.cpp  screen.cpp  settings_screen.cpp  startup_screen.cpp  wizard_screen.cpp  workspace.rs
src/tui/panels/: file_panel.cpp  output_panel.cpp  panel_base.cpp  target_panel.cpp
tests/: CMakeLists.txt
tests/cmake_gen/: modern_cmake_generator_test.cpp
tests/config/: keymap_manager_test.cpp  settings_manager_test.cpp  template_manager_test.cpp  theme_manager_test.cpp
tests/core/: project_repository_test.cpp  project_test.cpp  target_validator_test.cpp
tests/events/: event_bus_test.cpp
